--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
+                <!-- <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Beranda</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
@@ -79,17 +79,17 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Halaman</a>
                             <div class="dropdown-menu m-0">
-                                <a href="appointment.html" class="dropdown-item">Buat Janji</a>
+                                <a href="appointment.html" class="dropdown-item">Buat Janji</a> -->
                                 <!-- <a href="feature.html" class="dropdown-item">Features</a> -->
-                                <a href="blog.html" class="dropdown-item">Blog Kami</a>
+                                <!-- <a href="blog.html" class="dropdown-item">Blog Kami</a>
                                 <a href="team.html" class="dropdown-item">Tim Kami</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimoni</a>
+                                <a href="testimonial.html" class="dropdown-item">Testimoni</a> -->
                                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-                            </div>
+                            <!-- </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Kontak Kami</a>
                     </div>
-                    <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Buat Janji</a>
+                    <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Buat Janji</a> -->
                 </div>
             </nav>
 
