--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Beranda</a>
                         <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
@@ -111,31 +111,30 @@
         </div>
         <!-- Header End -->
 
-
         <!-- About Start -->
         <div class="container-fluid about bg-light py-5">
             <div class="container py-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="about-img pb-5 ps-5">
-                            <img src="img/about-1.jpg" class="img-fluid rounded w-100" style="object-fit: cover;" alt="Image">
-                            <div class="about-img-inner">
+                            <img src="img/n_about-2.jpg" class="img-fluid rounded w-100" style="object-fit: cover;" alt="Image">
+                            <!-- <div class="about-img-inner">
                                 <img src="img/about-2.jpg" class="img-fluid rounded-circle w-100 h-100" alt="Image">
-                            </div>
-                            <div class="about-experience">15 years experience</div>
+                            </div> -->
+                            <div class="about-experience">15 tahun pengalaman</div>
                         </div>
                     </div>
                     <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.4s">
                         <div class="section-title text-start mb-5">
-                            <h4 class="sub-title pe-3 mb-0">About Us</h4>
-                            <h1 class="display-3 mb-4">We are Ready to Help Improve Your Treatment.</h1>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+                            <h4 class="sub-title pe-3 mb-0">Tentang Kami</h4>
+                            <h1 class="display-3 mb-4">Kami Siap Membantu Anda Tampil Lebih Percaya Diri.</h1>
+                            <p class="mb-4">Kami adalah klinik kecantikan terpercaya yang menghadirkan perawatan kulit dan tubuh terbaik untuk Anda. Dengan tim ahli yang profesional, kami berkomitmen memberikan hasil optimal dan pelayanan penuh perhatian.</p>
                             <div class="mb-4">
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Refresing to get such a personal touch.</p>
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Duis aute irure dolor in reprehenderit in voluptate.</p>
-                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Pelayanan personal dengan sentuhan terbaik.</p>
+                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Produk perawatan aman dan berkualitas tinggi.</p>
+                                <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Pendekatan profesional untuk hasil maksimal.</p>
                             </div>
-                            <a href="#" class="btn btn-primary rounded-pill text-white py-3 px-5">Discover More</a>
+                            <!-- <a href="#" class="btn btn-primary rounded-pill text-white py-3 px-5">Discover More</a> -->
                         </div>
                     </div>
                 </div>
@@ -143,16 +142,15 @@
         </div>
         <!-- About End -->
 
-
-        <!-- Team Start -->
+ <!-- Team Start -->
         <div class="container-fluid team py-5">
             <div class="container py-5">
                 <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="sub-style">
-                        <h4 class="sub-title px-3 mb-0">Meet our team</h4>
+                        <h4 class="sub-title px-3 mb-0">Tim Kami</h4>
                     </div>
-                    <h1 class="display-3 mb-4">Physiotherapy Services from Professional Therapist</h1>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+                    <h1 class="display-3 mb-4">Perawatan Kecantikan Eksklusif dari Ahli Berpengalaman</h1>
+                    <p class="mb-0">Kami menyediakan layanan kecantikan terbaik yang didukung oleh tim terapis berpengalaman untuk memastikan kepuasan dan kenyamanan Anda.</p>
                 </div>
                 <div class="row g-4 justify-content-center">
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
@@ -167,8 +165,8 @@
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
-                                <h5>Full Name</h5>
-                                <p class="mb-0">Message Physio Therapist</p>
+                                <h5>ICA </h5>
+                                <p class="mb-0">Programmer</p>
                             </div>
                         </div>
                     </div>
@@ -184,8 +182,8 @@
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
-                                <h5>Full Name</h5>
-                                <p class="mb-0">Rehabilitation Therapist</p>
+                                <h5>ICA </h5>
+                                <p class="mb-0">Programmer</p>
                             </div>
                         </div>
                     </div>
@@ -201,8 +199,8 @@
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
-                                <h5>Full Name</h5>
-                                <p class="mb-0">Doctor of Physical therapy</p>
+                                <h5>ICA </h5>
+                                <p class="mb-0">Programmer</p>
                             </div>
                         </div>
                     </div>
@@ -218,8 +216,8 @@
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
-                                <h5>Full Name</h5>
-                                <p class="mb-0">Doctor of Physical therapy</p>
+                                <h5>ICA </h5>
+                                <p class="mb-0">Programmer</p>
                             </div>
                         </div>
                     </div>
@@ -229,15 +227,15 @@
         <!-- Team End -->
 
 
-        <!-- Feature Start -->
-        <div class="container-fluid feature py-5">
+          <!-- Feature Start -->
+          <div class="container-fluid feature py-5">
             <div class="container py-5">
                 <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="sub-style">
-                        <h4 class="sub-title px-3 mb-0">Why Choose Us</h4>
+                        <h4 class="sub-title px-3 mb-0">Mengapa Memilih Kami</h4>
                     </div>
-                    <h1 class="display-3 mb-4">Why Choose Us? Get Your Life Style Back</h1>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+                    <h1 class="display-3 mb-4">Mengapa Memilih Kami? Rasakan Kepercayaan Diri Kembali</h1>
+                    <p class="mb-0">Kami hadir untuk memberikan layanan kecantikan terbaik dengan perawatan modern yang didukung oleh tim profesional. Kepercayaan Anda adalah prioritas kami, sehingga kami memastikan setiap perawatan memberikan hasil maksimal.</p>
                 </div>
                 <div class="row g-4 justify-content-center">
                     <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
@@ -249,8 +247,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Licensed Therapist</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Ahli Bersertifikat</h5>
+                                    <p class="mb-0">Kami memiliki terapis profesional bersertifikat yang siap melayani Anda.</p>
                                 </div>
                             </div>
                         </div>
@@ -264,8 +262,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Personalized Treatment</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Perawatan Pribadi</h5>
+                                    <p class="mb-0">Setiap perawatan disesuaikan dengan kebutuhan dan tujuan kecantikan Anda.</p>
                                 </div>
                             </div>
                         </div>
@@ -279,8 +277,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Therapy Goals</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Hasil Terukur</h5>
+                                    <p class="mb-0">Kami fokus pada hasil yang nyata sesuai dengan tujuan Anda.</p>
                                 </div>
                             </div>
                         </div>
@@ -294,8 +292,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Practitioners Network</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Jaringan Profesional</h5>
+                                    <p class="mb-0">Kami didukung oleh jaringan ahli yang handal di bidang kecantikan.</p>
                                 </div>
                             </div>
                         </div>
@@ -309,8 +307,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Comfortable Center</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Kenyamanan Terjamin</h5>
+                                    <p class="mb-0">Nikmati perawatan di pusat kecantikan kami yang nyaman dan modern.</p>
                                 </div>
                             </div>
                         </div>
@@ -324,8 +322,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Experienced Stuff</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Staf Berpengalaman</h5>
+                                    <p class="mb-0">Tim kami memiliki pengalaman bertahun-tahun untuk melayani kebutuhan Anda.</p>
                                 </div>
                             </div>
                         </div>
@@ -339,8 +337,8 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Therapy Goals</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Perawatan Kulit Optimal</h5>
+                                    <p class="mb-0">Kami menawarkan solusi terbaik untuk menjaga kesehatan dan kecantikan kulit Anda.</p>
                                 </div>
                             </div>
                         </div>
@@ -354,15 +352,15 @@
                                     </div>
                                 </div>
                                 <div class="feature-content d-flex flex-column">
-                                    <h5 class="mb-4">Licensed Therapist</h5>
-                                    <p class="mb-0">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus,</p>
+                                    <h5 class="mb-4">Ahli Berlisensi</h5>
+                                    <p class="mb-0">Tim kami terdiri dari dokter dan ahli kecantikan berlisensi yang profesional.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
+                    <!-- <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
                         <a href="#" class="btn btn-primary rounded-pill text-white py-3 px-5">More Details</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
