--- a/index.html
+++ b/index.html
@@ -780,8 +780,8 @@
                             <a href="feature.html"><i class="fas fa-angle-right me-2"></i> Kenapa Kammi</a>
                             <a href="blog.html"><i class="fas fa-angle-right me-2"></i> Blog Kami </a>
                             <a href="team.html"><i class="fas fa-angle-right me-2"></i> Tim Kami</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Massage Therapy</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Rehabilitation</a>
+                            <a href="testimonial.html"><i class="fas fa-angle-right me-2"></i> Testimoni </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Buat Janji</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
